--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.App-logo #logo {
+  fill: #61DAFB;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -26,6 +30,19 @@
 
 .App-link {
   color: #61dafb;
+}
+
+@media (prefers-color-scheme: light) {
+  .App-logo #logo {
+    fill: blue;
+  }
+  .App-header {
+    background-color: #ccc;
+    color: black;
+  }
+  .App-link {
+    color: blue;
+  }
 }
 
 @keyframes App-logo-spin {
