--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #333333;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,19 +26,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@media (prefers-color-scheme: light) {
-  .App-logo #logo {
-    fill: blue;
-  }
-  .App-header {
-    background-color: #ccc;
-    color: black;
-  }
-  .App-link {
-    color: blue;
-  }
 }
 
 @keyframes App-logo-spin {
