--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@
   color: white;
 }
 
+button .button-icon {
+  filter: drop-shadow( 0px 0px 1px rgba(0, 0, 0, .7));
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
