--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,12 @@
   color: white;
 }
 
-button .button-icon {
-  filter: drop-shadow( 0px 0px 1px rgba(0, 0, 0, .7));
+.App-header button .button-icon {
+  touch-action: none;
+}
+
+.App-header button .button-icon {
+  filter: drop-shadow( 0px 0px 1px rgba(0, 0, 0, 1));
 }
 
 @keyframes App-logo-spin {
